--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "oh-my-zsh"]
-	path = oh-my-zsh
+[submodule "zsh/dot-oh-my-zsh"]
+	path = zsh/dot-oh-my-zsh
 	url = https://github.com/ohmyzsh/ohmyzsh.git
