Add license info

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -1,3 +1,6 @@
+# Freds Dotfiles 2025
+# the full BSD 2-Clause License can be found in the LICENSE file
+
 # keep C-b to move backwards in the shell
 unbind C-b
 set -g prefix C-v
